--- a/run/lib/Launchterm/install
+++ b/run/lib/Launchterm/install
@@ -14,14 +14,19 @@ readonly PLIST="$AGENT_DIR/$DOMAIN.plist"
 mkdir -p "$SUPPORT_DIR"
 mkdir -p "$AGENT_DIR"
 
-swiftc "$SCRIPT_DIR/Launchterm.swift" -o "$SUPPORT_DIR/$TARGET" -O \
-                                   -whole-module-optimization
+(
+    cd "$SCRIPT_DIR"
+    echo "Building Launchterm..."
+    swift build -c release -Xswiftc -Osize
+    cp .build/release/Launchterm "$SUPPORT_DIR/$TARGET"
+    strip "$SUPPORT_DIR/$TARGET"
+    sed -e "s/{USER}/$USER/" "$SCRIPT_DIR/$DOMAIN.template.plist" > "$PLIST"
 
-sed -e "s/{USER}/$USER/" "$SCRIPT_DIR/$DOMAIN.template.plist" > "$PLIST"
+    if launchctl list | grep -Fq "$DOMAIN"; then
+        launchctl unload "$PLIST"
+    fi
 
-if launchctl list | grep -Fq "$DOMAIN"; then
-    launchctl unload "$PLIST"
-fi
-
-launchctl load "$PLIST"
-echo "Installed $TARGET."
+    launchctl load "$PLIST"
+    echo "Installed $TARGET."
+    swift package clean
+)
